RESOLVED FIXED 52006
WKView shows a stale cursor when the web process crashes
https://bugs.webkit.org/show_bug.cgi?id=52006
Summary WKView shows a stale cursor when the web process crashes
Adam Roben (:aroben)
Reported 2011-01-06 12:16:39 PST
WKView shows a stale cursor when the web process crashes
Attachments
Patch (2.13 KB, patch)
2011-01-06 12:19 PST, Adam Roben (:aroben)
adachan: review+
Adam Roben (:aroben)
Comment 1 2011-01-06 12:19:02 PST
Adam Roben (:aroben)
Comment 2 2011-01-06 12:53:49 PST
Note You need to log in before you can comment on or make changes to this bug.