Always show the arrow cursor when the web process has crashed

Fixes <http://webkit.org/b/52006> WKView shows a stale cursor when the
web process crashes

Reviewed by Ada Chan.

* UIProcess/win/WebView.cpp:
(WebKit::WebView::processDidCrash):
(WebKit::WebView::didRelaunchProcess):
Update the cursor to reflect the new state.

(WebKit::WebView::cursorToShow): Always show the arrow cursor when the
web process has crashed.

git-svn-id: svn://svn.chromium.org/blink/trunk@75187 bbb929c8-8fbe-4397-9dbb-9b2b20218538